sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:13: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (b=true)
            ^