sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var a=getNombreValeurs()
  var b:Boolean=false
  do{
    b=false
    for (i<-1 to (a-2)){
    	if(plusPetit(i,i+1)==false){
      	echange(i,i+1)
        b=true
    	}
  	}
  } while (b=true)
}